--- a/index.html
+++ b/index.html
@@ -1,50 +1,81 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-     <div class = "container">
-     <div class="main-section"> 
-       <div class="side">
-       <div class="header"> 
-          <img src="" alt="logo"> <!--include logo image-->
-        <p> Avengers Real Estate</p> 
-       </div>
+<html lang="en">
 
-       <!--middlesection-->
-       <div class="middlesection">
-       <div class="Login">
-         <h2>Log In</h2>
-         <h2>Sign Up</h2>
-       </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Login</title>
+  <link rel="stylesheet" href="./css/styles.css">
+</head>
 
-      <p>Fullname</p>
-      <input class="inputbody" placeholder="John Wick" type="text" name="" value="">
-<p>Email</p>
-      <input class="inputbody" placeholder="you@example.com" type="Mail" name="" value=""> <br>
+<body>
+  <div class="container clear">
+    <div class="left">
+      <div class="form-container">
+        <div class="form-tab">
+          <ul>
+            <li>
+              <a href="javascript:void(0)" data-tab-content="login">Login</a>
+            </li>
+            <li class="active">
+              <a href="javascript:void(0)" data-tab-content="signup">Signup</a>
+            </li>
+          </ul>
+        </div>
 
-      <p>Password <span class="password">Forgot password?</span></p>
-      <input class="inputbody" placeholder="Enter your password"type="password" name="" value=""> <br>
+        <div class="form-content active" id="signup">
+          <form id="signup-form">
+            <div class="input-group">
+              <label>Fullname</label>
+              <input type="text" id="fullname" placeholder="Firstname Lastname" required>
+            </div>
 
-      <p><input type="checkbox" name="" value="">Keep me logged in</p>
+            <div class="input-group">
+              <label>Email</label>
+              <input type="email" id="email" placeholder="you@example.com" required>
+            </div>
 
-      <button type="button">LOGIN</button>
+            <div class="input-group">
+              <label>Password</label>
+              <input type="password" id="password" placeholder="Password" required>
+            </div>
 
-      <div>
-        <p>Don't have an account? <span>Sign up</span></p>
+            <button type="submit">SIGNUP</button>
+          </form>
+        </div>
+
+        <div class="form-content" id="login">
+          <form id="login-form">
+            <div class="input-group">
+              <label>Email</label>
+              <input type="email" id="email" placeholder="you@example.com" required>
+            </div>
+
+            <div class="input-group">
+              <div class="clear">
+                <label class="left">Password</label>
+                <a href="javascript:void(0)" class="right">Forgot Password?</a>
+              </div>
+              <input type="password" id="password" placeholder="Password" required>
+            </div>
+
+            <button type="submit">LOGIN</button>
+          </form>
+        </div>
       </div>
-      </div>
-     </div>
-
-
-<!--aside; include image to cover up 50% width-->
-     <div> 
-     
-     </div>
     </div>
-     </div>
-  </body>
+
+    <div class="right">
+      <div class="content">
+        <h1>
+          A new way to experience real estate in the infinite virtual
+        </h1>
+      </div>
+    </div>
+  </div>
+
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
